--- a/app/src/main/res/layout-w600dp-land/activity_settings.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_settings.xml
@@ -47,7 +47,7 @@
 		android:gravity="center_vertical|start"
 		android:padding="8dp"
 		android:singleLine="true"
-		android:textAppearance="@style/TextAppearance.Kotatsu.SectionHeader"
+		android:textAppearance="?textAppearanceTitleSmall"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toEndOf="@id/container_master"
 		app:layout_constraintTop_toTopOf="parent"
