--- a/app/src/main/res/layout/item_list_group.xml
+++ b/app/src/main/res/layout/item_list_group.xml
@@ -22,7 +22,7 @@
 		android:gravity="center_vertical|start"
 		android:padding="@dimen/grid_spacing"
 		android:singleLine="true"
-		android:textAppearance="@style/TextAppearance.Kotatsu.SectionHeader"
+		android:textAppearance="?textAppearanceTitleSmall"
 		tools:text="@tools:sample/lorem[2]" />
 
 	<Button
