--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -113,4 +113,9 @@
 		<item>@string/never</item>
 		<item>@string/manga_with_downloaded_chapters</item>
 	</string-array>
+	<string-array name="metered_network_options" translatable="false">
+		<item>@string/allow_always</item>
+		<item>@string/ask_every_time</item>
+		<item>@string/dont_allow</item>
+	</string-array>
 </resources>
