--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -266,6 +266,13 @@
 		<item name="cornerSize">50%</item>
 	</style>
 
+	<style name="ShapeAppearanceOverlay.Material3.Corner.None" parent="">
+		<item name="cornerSizeBottomLeft">0dp</item>
+		<item name="cornerSizeBottomRight">0dp</item>
+		<item name="cornerSizeTopLeft">0dp</item>
+		<item name="cornerSizeTopRight">0dp</item>
+	</style>
+
 	<!--Preferences-->
 
 	<style name="PreferenceThemeOverlay.Kotatsu">
