Change periodical backup creation

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -21,6 +21,7 @@
 		<attr name="android:valueTo" />
 		<attr name="android:stepSize" />
 		<attr name="tickVisible" />
+		<attr name="useSimpleSummaryProvider" />
 	</declare-styleable>
 
 	<declare-styleable name="ListItemTextView">
