Telegram backups refactoring stage 1

--- a/app/src/main/res/xml/pref_backup_periodic.xml
+++ b/app/src/main/res/xml/pref_backup_periodic.xml
@@ -50,15 +50,16 @@
 		app:allowDividerAbove="true"
 		app:isPreferenceVisible="false" />
 
+	<EditTextPreference
+		android:inputType="text"
+		android:key="telegram_chat_id"
+		android:summary="Enter the chat ID where backups should be sent"
+		android:title="@string/telegram_chat_id"
+		app:allowDividerAbove="true" />
+
 	<Preference
 		android:key="open_telegram_chat"
-		android:title="Open Telegram Bot"
-		android:summary="Press to open chat with Kotatsu Backup Bot" />
-	<EditTextPreference
-		android:key="telegram_chat_id"
-		android:title="Telegram Chat ID"
-		android:inputType="text"
-		android:defaultValue=""
-		android:summary="Enter the chat ID where backups should be sent" />
+		android:summary="Press to open chat with Kotatsu Backup Bot"
+		android:title="@string/open_telegram_bot" />
 
 </androidx.preference.PreferenceScreen>
