--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -124,4 +124,10 @@
 		<item>@string/portrait</item>
 		<item>@string/landscape</item>
 	</string-array>
+	<string-array name="reader_controls" translatable="false">
+		<item>@string/prev_chapter</item>
+		<item>@string/next_chapter</item>
+		<item>@string/pages_slider</item>
+		<item>@string/chapters_and_pages</item>
+	</string-array>
 </resources>
