--- a/app/src/main/res/xml/pref_reader.xml
+++ b/app/src/main/res/xml/pref_reader.xml
@@ -138,7 +138,12 @@
 		android:defaultValue="false"
 		android:key="pages_numbers"
 		android:summary="@string/show_pages_numbers_summary"
-		android:title="@string/show_pages_numbers" />x
+		android:title="@string/show_pages_numbers" />
+
+	<MultiSelectListPreference
+		android:entries="@array/reader_controls"
+		android:key="reader_controls"
+		android:title="@string/reader_controls_in_bottom_bar" />
 
 	<ListPreference
 		android:defaultValue="2"
