Screen rotation button in reader

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -129,5 +129,6 @@
 		<item>@string/next_chapter</item>
 		<item>@string/pages_slider</item>
 		<item>@string/chapters_and_pages</item>
+		<item>@string/screen_orientation</item>
 	</string-array>
 </resources>
