--- a/app/src/main/res/xml/pref_reader.xml
+++ b/app/src/main/res/xml/pref_reader.xml
@@ -24,6 +24,12 @@
 		app:useSimpleSummaryProvider="true" />
 
 	<SwitchPreferenceCompat
+		android:defaultValue="false"
+		android:key="reader_zoom_buttons"
+		android:summary="@string/reader_zoom_buttons_summary"
+		android:title="@string/reader_zoom_buttons" />
+
+	<SwitchPreferenceCompat
 		android:defaultValue="true"
 		android:key="webtoon_zoom"
 		android:summary="@string/webtoon_zoom_summary"
@@ -41,22 +47,21 @@
 
 	<SwitchPreferenceCompat
 		android:defaultValue="false"
-		android:key="reader_zoom_buttons"
-		android:summary="@string/reader_zoom_buttons_summary"
-		android:title="@string/reader_zoom_buttons" />
-
-	<SwitchPreferenceCompat
-		android:defaultValue="false"
 		android:key="webtoon_gaps"
 		android:summary="@string/webtoon_gaps_summary"
 		android:title="@string/webtoon_gaps" />
+
+	<MultiSelectListPreference
+		android:entries="@array/reader_controls"
+		android:key="reader_controls"
+		android:title="@string/reader_controls_in_bottom_bar"
+		app:allowDividerAbove="true" />
 
 	<Preference
 		android:key="reader_tap_actions"
 		android:persistent="false"
 		android:summary="@string/reader_actions_summary"
-		android:title="@string/reader_actions"
-		app:allowDividerAbove="true" />
+		android:title="@string/reader_actions" />
 
 	<SwitchPreferenceCompat
 		android:defaultValue="false"
@@ -139,11 +144,6 @@
 		android:key="pages_numbers"
 		android:summary="@string/show_pages_numbers_summary"
 		android:title="@string/show_pages_numbers" />
-
-	<MultiSelectListPreference
-		android:entries="@array/reader_controls"
-		android:key="reader_controls"
-		android:title="@string/reader_controls_in_bottom_bar" />
 
 	<ListPreference
 		android:defaultValue="2"
