--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -77,4 +77,9 @@
 		<item>1</item>
 		<item>2</item>
 	</string-array>
+	<string-array name="values_list_badges" translatable="false">
+		<!-- MangaListMapper flags -->
+		<item>4</item>
+		<item>1</item>
+	</string-array>
 </resources>
