Fix favorite categories visibility (close #1281)

--- a/app/src/main/res/layout/sheet_favorite_categories.xml
+++ b/app/src/main/res/layout/sheet_favorite_categories.xml
@@ -107,6 +107,8 @@
 		android:scrollIndicators="top"
 		android:scrollbars="vertical"
 		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+		app:layout_constrainedHeight="true"
+		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@id/guideline"
