Improve global search

--- a/app/src/main/res/layout/item_manga_grid.xml
+++ b/app/src/main/res/layout/item_manga_grid.xml
@@ -39,7 +39,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="top|start"
-			android:layout_marginTop="@dimen/card_indicator_offset"
+			android:layout_marginTop="10dp"
 			android:background="@drawable/bg_list_icons"
 			android:orientation="horizontal"
 			android:padding="4dp"
