--- a/app/src/main/res/layout/item_manga_list_details.xml
+++ b/app/src/main/res/layout/item_manga_list_details.xml
@@ -36,7 +36,7 @@
 			android:id="@+id/iconsView"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginTop="@dimen/card_indicator_offset"
+			android:layout_marginTop="10dp"
 			android:background="@drawable/bg_list_icons"
 			android:orientation="horizontal"
 			android:padding="4dp"
