--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
 	<color name="blue_primary">#1976D2</color>
 	<color name="grey">#424242</color>
 	<color name="dim">#99000000</color>
+	<color name="dim2">#C8FFFFFF</color>
 	<color name="warning">#E65100</color>
 	<color name="launcher_background">#FFFFFF</color>
 	<color name="common_green">#388E3C</color>
