--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -48,6 +48,7 @@
 		<item>@string/sync_url_default</item>
 		<item>https://moe.shirizu.org</item>
 		<item>http://86.57.183.214:8081</item>
+		<item>http://54.254.71.100:8080</item>
 	</string-array>
 	<string-array name="values_proxy_types" translatable="false">
 		<item>DIRECT</item>
