Dim navbar in details

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -318,12 +318,12 @@
 		tools:layout="@layout/sheet_chapters_pages" />
 
 	<org.koitharu.kotatsu.core.ui.widgets.WindowInsetHolder
+		android:id="@+id/navbarDim"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_gravity="bottom"
+		android:background="@color/bg_dim_bottomsheet"
 		android:elevation="9dp"
-		tools:layout_height="10dp"
-		android:id="@+id/navbarDim"
-		android:background="@color/dim2" />
+		tools:layout_height="10dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
