Include reader tap settings into backups

--- a/app/src/main/res/layout/sheet_favorite_categories.xml
+++ b/app/src/main/res/layout/sheet_favorite_categories.xml
@@ -82,6 +82,7 @@
 		android:layout_marginEnd="@dimen/margin_normal"
 		android:ellipsize="end"
 		android:gravity="center_vertical|start"
+		android:maxLines="3"
 		android:textAppearance="?attr/textAppearanceBodyLarge"
 		app:layout_constraintBottom_toBottomOf="@id/guideline"
 		app:layout_constraintEnd_toEndOf="parent"
