--- a/app/src/main/res/xml/pref_source.xml
+++ b/app/src/main/res/xml/pref_source.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<SwitchPreferenceCompat
 		android:defaultValue="false"
@@ -10,6 +11,13 @@
 		android:order="0"
 		android:persistent="false"
 		android:title="@string/enable_source" />
+
+	<SwitchPreferenceCompat
+		android:defaultValue="false"
+		android:key="no_captcha"
+		android:order="104"
+		android:summary="@string/disable_captcha_notifications_summary"
+		android:title="@string/disable_captcha_notifications" />
 
 	<SwitchPreferenceCompat
 		android:defaultValue="false"
@@ -25,6 +33,7 @@
 		android:persistent="false"
 		android:title="@string/open_in_browser"
 		app:allowDividerAbove="true"
-		app:isPreferenceVisible="false" />
+		app:isPreferenceVisible="false"
+		tools:isPreferenceVisible="true" />
 
 </PreferenceScreen>
