Fixes and improvements batch

--- a/app/src/main/res/layout/item_empty_state.xml
+++ b/app/src/main/res/layout/item_empty_state.xml
@@ -37,6 +37,7 @@
 
 	<Button
 		android:id="@+id/button_retry"
+		style="?materialButtonTonalStyle"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="@dimen/margin_normal"
