--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -47,7 +47,7 @@
 	<string-array name="sync_url_list" translatable="false">
 		<item>@string/sync_url_default</item>
 		<item>https://moe.shirizu.org</item>
-		<item>http://dragonx943.id.vn:8080</item>
+		<item>http://dragonx943.id.vn</item>
 		<item>http://86.57.183.214:8081</item>
 	</string-array>
 	<string-array name="values_proxy_types" translatable="false">
