--- a/app/src/main/res/layout-w600dp-land/activity_reader.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_reader.xml
@@ -49,45 +49,13 @@
 			android:elevation="@dimen/m3_card_elevated_elevation"
 			app:elevation="@dimen/m3_card_elevated_elevation"
 			app:popupTheme="@style/ThemeOverlay.Kotatsu"
-			tools:menu="@menu/opt_reader_top">
+			tools:menu="@menu/opt_reader">
 
-			<LinearLayout
-				android:id="@+id/layout_slider"
-				android:layout_width="wrap_content"
+			<org.koitharu.kotatsu.reader.ui.ReaderActionsView
+				android:id="@+id/actionsView"
+				android:layout_width="400dp"
 				android:layout_height="wrap_content"
-				android:layout_gravity="center_vertical|end"
-				android:layout_marginEnd="2dp"
-				android:gravity="center_vertical|end">
-
-				<ImageButton
-					android:id="@+id/button_prev"
-					style="?actionButtonStyle"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:contentDescription="@string/prev_chapter"
-					android:src="@drawable/ic_prev"
-					android:tooltipText="@string/prev_chapter" />
-
-				<com.google.android.material.slider.Slider
-					android:id="@+id/slider"
-					android:layout_width="260dp"
-					android:layout_height="wrap_content"
-					android:stepSize="1.0"
-					android:valueFrom="0"
-					app:labelBehavior="floating"
-					tools:value="6"
-					tools:valueTo="20" />
-
-				<ImageButton
-					android:id="@+id/button_next"
-					style="?actionButtonStyle"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:contentDescription="@string/next_chapter"
-					android:src="@drawable/ic_next"
-					android:tooltipText="@string/next_chapter" />
-
-			</LinearLayout>
+				android:layout_gravity="center_vertical|end" />
 
 		</com.google.android.material.appbar.MaterialToolbar>
 
