--- a/app/src/main/res/layout/activity_reader.xml
+++ b/app/src/main/res/layout/activity_reader.xml
@@ -49,68 +49,26 @@
 			android:elevation="@dimen/m3_card_elevated_elevation"
 			app:elevation="@dimen/m3_card_elevated_elevation"
 			app:popupTheme="@style/ThemeOverlay.Kotatsu"
-			tools:menu="@menu/opt_reader_top" />
+			tools:menu="@menu/opt_reader" />
 
 	</com.google.android.material.appbar.AppBarLayout>
 
-	<com.google.android.material.card.MaterialCardView
-		android:id="@+id/appbar_bottom"
-		style="?materialCardViewElevatedStyle"
+	<com.google.android.material.dockedtoolbar.DockedToolbarLayout
+		android:id="@+id/toolbar_docked"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_gravity="bottom"
-		android:layout_margin="8dp"
+		android:fitsSystemWindows="false"
 		app:cardBackgroundColor="?colorSurfaceContainer"
 		app:layout_insetEdge="bottom">
 
-		<com.google.android.material.appbar.MaterialToolbar
-			android:id="@+id/toolbar_bottom"
+		<org.koitharu.kotatsu.reader.ui.ReaderActionsView
+			android:id="@+id/actionsView"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			tools:menu="@menu/opt_reader_bottom">
+			android:minHeight="?actionBarSize" />
 
-			<LinearLayout
-				android:id="@+id/layout_slider"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center_vertical"
-				android:layout_marginEnd="2dp"
-				android:gravity="center_vertical|end">
-
-				<ImageButton
-					android:id="@+id/button_prev"
-					style="?actionButtonStyle"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:contentDescription="@string/prev_chapter"
-					android:src="@drawable/ic_prev"
-					android:tooltipText="@string/prev_chapter" />
-
-				<com.google.android.material.slider.Slider
-					android:id="@+id/slider"
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:stepSize="1.0"
-					android:valueFrom="0"
-					app:labelBehavior="floating"
-					tools:value="6"
-					tools:valueTo="20" />
-
-				<ImageButton
-					android:id="@+id/button_next"
-					style="?actionButtonStyle"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:contentDescription="@string/next_chapter"
-					android:src="@drawable/ic_next"
-					android:tooltipText="@string/next_chapter" />
-
-			</LinearLayout>
-
-		</com.google.android.material.appbar.MaterialToolbar>
-
-	</com.google.android.material.card.MaterialCardView>
+	</com.google.android.material.dockedtoolbar.DockedToolbarLayout>
 
 	<org.koitharu.kotatsu.reader.ui.ReaderToastView
 		android:id="@+id/toastView"
