--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+	<style name="SplashTheme" parent="Theme.SplashScreen.IconBackground">
+		<item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher_foreground</item>
+		<item name="windowSplashScreenAnimationDuration">@integer/splash_screen_duration</item>
+		<item name="windowSplashScreenIconBackgroundColor">@color/kotatsu_primaryContainer</item>
+		<item name="postSplashScreenTheme">@style/Theme.Kotatsu</item>
+	</style>
+
 	<style name="ThemeOverlay.Kotatsu" parent="ThemeOverlay.Material3.Dark">
 		<item name="android:navigationBarColor">@android:color/transparent</item>
 	</style>
