--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<style name="Base.V31.Kotatsu" parent="Base.V27.Kotatsu">
-		<item name="android:windowSplashScreenAnimatedIcon">@drawable/avd_splash</item>
-		<item name="android:windowSplashScreenAnimationDuration">@integer/splash_screen_duration</item>
-		<item name="android:windowSplashScreenBackground">@color/m3_sys_color_dynamic_light_surface</item>
+	<style name="SplashTheme" parent="Theme.SplashScreen">
+		<item name="windowSplashScreenAnimatedIcon">@drawable/avd_splash</item>
+		<item name="windowSplashScreenAnimationDuration">@integer/splash_screen_duration</item>
+		<item name="windowSplashScreenBackground">@color/m3_sys_color_dynamic_light_surface</item>
+		<item name="postSplashScreenTheme">@style/Theme.Kotatsu</item>
 	</style>
-
-	<style name="Theme.Kotatsu" parent="Base.V31.Kotatsu" />
 
 	<!-- From ThemeOverlay.Material3.DynamicColors.Light -->
 	<style name="Theme.Kotatsu.Monet">
