--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,6 +95,7 @@
 		android:id="@+id/bottomNav"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_gravity="bottom" />
+		android:layout_gravity="bottom"
+		android:fitsSystemWindows="false" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
