--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,7 +9,7 @@
 		android:id="@+id/appbar"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:fitsSystemWindows="true"
+		android:fitsSystemWindows="false"
 		app:liftOnScroll="false">
 
 		<com.google.android.material.appbar.MaterialToolbar
