--- a/app/src/main/res/layout/sheet_stats_manga.xml
+++ b/app/src/main/res/layout/sheet_stats_manga.xml
@@ -18,6 +18,7 @@
 		android:id="@+id/scrollView"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:clipToPadding="false"
 		android:scrollIndicators="top">
 
 		<LinearLayout
