--- a/app/src/main/res/layout/activity_appwidget_shelf.xml
+++ b/app/src/main/res/layout/activity_appwidget_shelf.xml
@@ -10,7 +10,7 @@
 		android:id="@+id/appbar"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:fitsSystemWindows="true">
+		android:fitsSystemWindows="false">
 
 		<com.google.android.material.appbar.MaterialToolbar
 			android:id="@id/toolbar"
