--- a/app/src/main/res/layout/sheet_filter.xml
+++ b/app/src/main/res/layout/sheet_filter.xml
@@ -17,6 +17,7 @@
 		android:id="@+id/scrollView"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:clipToPadding="false"
 		android:scrollIndicators="top"
 		tools:ignore="UnusedAttribute">
 
