--- a/app/src/main/res/layout/sheet_list_mode.xml
+++ b/app/src/main/res/layout/sheet_list_mode.xml
@@ -15,8 +15,10 @@
 		app:title="@string/list_options" />
 
 	<androidx.core.widget.NestedScrollView
+		android:id="@+id/scrollView"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		android:clipToPadding="false"
 		android:scrollIndicators="top"
 		android:scrollbars="vertical">
 
