--- a/app/src/main/res/layout/sheet_welcome.xml
+++ b/app/src/main/res/layout/sheet_welcome.xml
@@ -15,7 +15,8 @@
 	<androidx.core.widget.NestedScrollView
 		android:id="@+id/scrollView"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="wrap_content"
+		android:clipToPadding="false"
 		android:scrollIndicators="top">
 
 		<LinearLayout
