--- a/app/src/main/res/layout/sheet_chapters_pages.xml
+++ b/app/src/main/res/layout/sheet_chapters_pages.xml
@@ -40,7 +40,8 @@
 				app:tabIndicatorGravity="stretch"
 				app:tabInlineLabel="true"
 				app:tabMinWidth="0dp"
-				app:tabMode="scrollable" />
+				app:tabMode="scrollable"
+				app:tabUnboundedRipple="true" />
 
 			<com.google.android.material.button.MaterialSplitButton
 				android:id="@+id/split_button_read"
