--- a/app/src/main/res/menu/popup_fav_tab_all.xml
+++ b/app/src/main/res/menu/popup_fav_tab_all.xml
@@ -6,4 +6,8 @@
 		android:id="@+id/action_hide"
 		android:title="@string/hide" />
 
+	<item
+		android:id="@+id/action_manage"
+		android:title="@string/manage" />
+
 </menu>
